Update to use the .rec format for my server

--- a/index.html
+++ b/index.html
@@ -100,8 +100,9 @@
     <script src="./dist/hlviewer.js"></script>
     <script>
       window.addEventListener('load', () => {
-        var viewer = HLViewer.init('#hlv-target', 'res')
-        viewer.load('kz_ea_highblock.dem')
+        var viewer = HLViewer.init('#hlv-target', './res')
+        viewer.load('deathrun_forest.bsp')
+        viewer.load('[500FPS CAP].rec')
         viewer.setTitle('Cupe on kz_ea_highblock done in 02:32.95')
       })
     </script>
