Update angles for entities

--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
       window.addEventListener('load', () => {
         var viewer = HLViewer.init('#hlv-target', './res')
         viewer.load('deathrun_forest.bsp')
-        viewer.load('[500FPS CAP].rec')
-        viewer.setTitle('Cupe on kz_ea_highblock done in 02:32.95')
+        viewer.load('deathrun_forest.rec')
+        viewer.setTitle('Record')
       })
     </script>
   </head>
