--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       gtag('config', 'UA-85913275-8');
     </script>
 
-    <script src="./dist/hlviewer.min.js"></script>
+    <script src="./dist/hlviewer.js"></script>
     <script>
       window.addEventListener('load', () => {
         var viewer = HLViewer.init('#hlv-target', './res')
