--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
     <script>
       window.addEventListener('load', () => {
         var viewer = HLViewer.init('#hlv-target', './res')
-        viewer.load('deathrun_bhopz_v2.bsp')
-        viewer.load('deathrun_bhopz_v2.rec')
+        viewer.load('bhop_green_sector.bsp')
+        viewer.load('bhop_green_sector.rec')
         viewer.setTitle('Record')
       })
     </script>
